# core

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  commands.rs  config.rs  ctx.rs  interactive.rs  lib.rs  main.rs  profiles.rs  prompts.rs  repository.rs  run.rs  utils.rs
src/cli/: args.rs  build.rs  commands.rs  flags.rs  mod.rs  resolve.rs  resolved.rs
src/commands/: build.rs  handlers.rs  header.rs  mod.rs  mono.rs  setup.rs  single.rs
src/commands/mono/: clone.rs  config.rs  display.rs  mod.rs  mode.rs  resolve.rs  setup.rs  watch.rs  wraps.rs
src/config/: crud.rs  display.rs  io.rs  mod.rs  types.rs
src/profile/: crud.rs  display.rs  mod.rs
src/utils/: confirm.rs  mod.rs  prerequisites.rs  process.rs  timing.rs
src/workspace/: clean.rs  mod.rs  resolve.rs  status.rs  types.rs  update.rs
tests/: cli.rs  commands.rs  config.rs  ctx.rs  helpers.rs  interactive.rs  profile.rs  profiles.rs  prompts.rs  repository.rs  utils.rs  workspace.rs
tests/cli/: build.rs  resolve.rs
tests/commands/: build.rs  display.rs  header.rs  mono.rs  single.rs
tests/commands/mono/: clone.rs  config.rs  mode.rs  resolve.rs  setup.rs  watch.rs  wraps.rs
tests/common/: args.rs  harness.rs  io.rs  mod.rs  runner.rs
tests/config/: crud.rs  display.rs  fixtures.rs  io.rs  types.rs
tests/profile/: crud.rs  display.rs
tests/utils/: confirm.rs  prerequisites.rs  process.rs
tests/workspace/: clean.rs  helpers.rs  resolve.rs  status.rs  update.rs
wix/: main.wxs
