[package]
name = "star-setup"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
dunce = "1"

[[bin]]
name = "star-setup"
path = "src/main.rs"

[build-dependencies]
embed-manifest = "1.5.0"
