[package]
name = "star-setup"
version = "0.3.6"
edition = "2021"
repository = "https://github.com/star-setup/core"
description = "Lightweight CLI to clone, configure, and wire single or multi-repo ecosystems"
homepage = "https://github.com/star-setup/core"
authors = ["Mason L'Etoile <contact@masonletoile.ca>"]

[package.metadata.wix]
upgrade-guid = "57628095-E500-4593-93F9-985D6B8E3C48"
path-guid = "3A8F662D-2FD3-4946-AD3D-DC1384FD33D3"
license = false
eula = false

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
dunce = "1"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
embed-manifest = "1.5.0"

[[bin]]
name = "star-setup"
path = "src/main.rs"

[lib]
name = "star_setup"
path = "src/lib.rs"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
